--- a/index.html
+++ b/index.html
@@ -1,145 +1,113 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js GLB Model</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            background: url('hauhi.jpg') no-repeat center center fixed;
-            background-size: cover;
-        }
-        canvas {
-            display: block;
-        }
-        .overlay-text {
-            position: absolute;
-            top: 50px;
-            width: 100%;
-            text-align: center;
-            font-size: 48px;
-            font-weight: bold;
-            color: black;
-            font-family: Arial, sans-serif;
-        }
-    </style>
-    <!-- Используем правильный импорт для Three.js -->
-    <script type="module">
-        import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.module.js';
-        import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.128.0/examples/jsm/loaders/GLTFLoader.js';
-        import { Tween, Easing } from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';
+<script type="module">
+    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.module.js';
+    import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.128.0/examples/jsm/loaders/GLTFLoader.js';
+    import { Tween, Easing } from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';
 
-        // Создаем сцену, камеру и рендерер
-        const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-        
-        camera.position.set(0, 5, 5); // Камера расположена на высоте 5 и смотрит на центр сцены
-        camera.lookAt(0, 0, 0); // Смотрит в центр сцены
+    // Создаем сцену, камеру и рендерер
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+    
+    camera.position.set(0, 5, 5); // Камера расположена на высоте 5 и смотрит на центр сцены
+    camera.lookAt(0, 0, 0); // Смотрит в центр сцены
 
-        const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        renderer.outputEncoding = THREE.sRGBEncoding;
-        document.body.appendChild(renderer.domElement);
+    const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.outputEncoding = THREE.sRGBEncoding;
+    document.body.appendChild(renderer.domElement);
 
-        // Освещение
-        const ambientLight = new THREE.AmbientLight(0xffffff, 0.3);
-        scene.add(ambientLight);
+    // Освещение
+    const ambientLight = new THREE.AmbientLight(0xffffff, 0.3);
+    scene.add(ambientLight);
 
-        const pointLight = new THREE.PointLight(0xf8c8a8, 5);
-        pointLight.position.set(-3, 5, 7);
-        scene.add(pointLight);
+    const pointLight = new THREE.PointLight(0xf8c8a8, 5);
+    pointLight.position.set(-3, 5, 7);
+    scene.add(pointLight);
 
-        // Текущая модель
-        let currentModel = null;
-        let mixer;
+    // Текущая модель
+    let currentModel = null;
+    let mixer;
 
-        // Функция для загрузки модели
-        function loadModel(modelPath) {
-            const loader = new GLTFLoader();
-            loader.load(modelPath, function (glb) {
-                // Очистка предыдущей модели
-                if (currentModel) {
-                    scene.remove(currentModel);
-                }
-
-                // Загружаем новую модель
-                const model = glb.scene;
-                mixer = new THREE.AnimationMixer(model);
-
-                // Проверяем, есть ли анимации в модели
-                if (glb.animations && glb.animations.length > 0) {
-                    glb.animations.forEach((clip) => {
-                        const action = mixer.clipAction(clip);
-                        action.play();
-                    });
-                } else {
-                    console.warn("Нет анимаций в модели!");
-                }
-
-                model.position.set(0, 0, 0);
-                model.scale.setScalar(1.2);
-                scene.add(model);
-
-                // Обновляем текущую модель
-                currentModel = model;
-
-                // Сохраняем правильное положение камеры
-                camera.position.set(0, 5, 5);
-                camera.lookAt(0, 0, 0);
-            });
-        }
-
-        // Загружаем начальную модель
-        loadModel('/untitled2.glb');
-
-        // Функция для анимации движения камеры
-        function animateCamera(targetPosition, duration) {
-            const coords = {
-                x: camera.position.x,
-                y: camera.position.y,
-                z: camera.position.z
-            };
-
-            const tween = new Tween(coords) // Используем класс Tween для анимации
-                .to({ x: targetPosition.x, y: targetPosition.y, z: targetPosition.z }, duration)
-                .easing(Easing.Quadratic.InOut)
-                .onUpdate(() => {
-                    camera.position.set(coords.x, coords.y, coords.z);
-                    camera.lookAt(0, 0, 0);
-                })
-                .start();
-
-            return tween;
-        }
-
-        // Обработчик прокрутки колесика
-        window.addEventListener('wheel', function(event) {
-            if (event.deltaY > 0) {
-                // Прокрутка вниз, загружаем следующую модель и анимируем камеру
-                loadModel('/untitled.glb');
-                animateCamera({x: 0, y: 5, z: 7}, 1000); // Камера плавно отходит назад
-            } else {
-                // Прокрутка вверх, возвращаемся к предыдущей модели и анимируем камеру
-                loadModel('/untitled2.glb');
-                animateCamera({x: 0, y: 5, z: 5}, 1000); // Камера возвращается на прежнюю позицию
+    // Функция для загрузки модели
+    function loadModel(modelPath) {
+        const loader = new GLTFLoader();
+        loader.load(modelPath, function (glb) {
+            // Очистка предыдущей модели
+            if (currentModel) {
+                scene.remove(currentModel);
             }
+
+            // Загружаем новую модель
+            const model = glb.scene;
+            mixer = new THREE.AnimationMixer(model);
+
+            // Проверяем, есть ли анимации в модели
+            if (glb.animations && glb.animations.length > 0) {
+                glb.animations.forEach((clip) => {
+                    const action = mixer.clipAction(clip);
+                    action.play();
+                });
+            } else {
+                console.warn("Нет анимаций в модели!");
+            }
+
+            model.position.set(0, 0, 0);
+            model.scale.setScalar(1.2);
+            scene.add(model);
+
+            // Обновляем текущую модель
+            currentModel = model;
+
+            // Сохраняем правильное положение камеры
+            camera.position.set(0, 5, 5);
+            camera.lookAt(0, 0, 0);
         });
+    }
 
-        // Анимация и рендеринг
-        function animate(time) {
-            requestAnimationFrame(animate);
-            const delta = 0.014;
-            if (mixer) mixer.update(delta);
-            TWEEN.update(time); // Обновляем TWEEN
-            renderer.render(scene, camera);
+    // Загружаем начальную модель
+    loadModel('/untitled2.glb');
+
+    // Функция для анимации движения камеры
+    function animateCamera(targetPosition, duration) {
+        const coords = {
+            x: camera.position.x,
+            y: camera.position.y,
+            z: camera.position.z
+        };
+
+        const tween = new Tween(coords) // Используем класс Tween для анимации
+            .to({ x: targetPosition.x, y: targetPosition.y, z: targetPosition.z }, duration)
+            .easing(Easing.Quadratic.InOut)
+            .onUpdate(() => {
+                camera.position.set(coords.x, coords.y, coords.z);
+                camera.lookAt(0, 0, 0);
+            })
+            .start();
+
+        return tween;
+    }
+
+    // Обработчик прокрутки колесика
+    window.addEventListener('wheel', function(event) {
+        if (event.deltaY > 0) {
+            // Прокрутка вниз, загружаем следующую модель и анимируем камеру
+            loadModel('/untitled.glb');
+            animateCamera({x: 0, y: 5, z: 7}, 1000); // Камера плавно отходит назад
+        } else {
+            // Прокрутка вверх, возвращаемся к предыдущей модели и анимируем камеру
+            loadModel('/untitled2.glb');
+            animateCamera({x: 0, y: 5, z: 5}, 1000); // Камера возвращается на прежнюю позицию
         }
+    });
 
-        animate();
-    </script>
-</head>
-<body>
-    <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
-</body>
-</html>
+    // Анимация и рендеринг
+    function animate(time) {
+        requestAnimationFrame(animate);
+        const delta = 0.014;
+        if (mixer) mixer.update(delta);
+        TWEEN.update(); // Обновляем TWEEN
+        renderer.render(scene, camera);
+    }
+
+    animate();
+</script>
+
