--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Three.js GLB Model</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            background: url('hauhi.jpg') no-repeat center center fixed;
+            background-size: cover;
+        }
+        canvas {
+            display: block;
+        }
+        .overlay-text {
+            position: absolute;
+            top: 50px;
+            width: 100%;
+            text-align: center;
+            font-size: 48px;
+            font-weight: bold;
+            color: black;
+            font-family: Arial, sans-serif;
+        }
+    </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+</head>
+<body>
+    <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
 
+    <script>
+        // Создаем сцену, камеру и рендерер
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+        
+        camera.position.set(0, 5, 0);
+        camera.lookAt(0, 0, 0);
+
+        const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.outputEncoding = THREE.sRGBEncoding;
+        document.body.appendChild(renderer.domElement);
+
+        // Освещение
+        const ambientLight = new THREE.AmbientLight(0xffffff, 0.2);
+        scene.add(ambientLight);
+
+        const pointLight = new THREE.PointLight(0xf8c8a8, 5);
+        pointLight.position.set(-3, 5, 10);
+        scene.add(pointLight);
+
+        // Загрузка модели
+        let mixer;
+        const loader = new THREE.GLTFLoader();
+
+        loader.load('/untitled2.glb', function (glb) {
+            const model = glb.scene;
+            mixer = new THREE.AnimationMixer(model);
+            glb.animations.forEach((clip) => {
+                const action = mixer.clipAction(clip);
+                action.play();
+            });
+            model.position.set(0, 0, 0);
+            model.scale.setScalar(1.2);
+            scene.add(model);
+        });
+
+        // Анимация и рендеринг
+        function animate() {
+            requestAnimationFrame(animate);
+            const delta = 0.016;
+            if (mixer) mixer.update(delta);
+            renderer.render(scene, camera);
+        }
+
+        animate();
+    </script>
+</body>
+</html>
