--- a/index.html
+++ b/index.html
@@ -29,55 +29,83 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
-    <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
 
     <script>
-        // Создаем сцену, камеру и рендерер
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-        
         camera.position.set(0, 5, 0);
         camera.lookAt(0, 0, 0);
 
-        const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+        const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true, preserveDrawingBuffer: false });
         renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.setPixelRatio(3);
         renderer.outputEncoding = THREE.sRGBEncoding;
-        renderer.setPixelRatio(window.devicePixelRatio);
+        renderer.toneMapping = THREE.ReinhardToneMapping;
         document.body.appendChild(renderer.domElement);
 
-        // Освещение
-        const ambientLight = new THREE.AmbientLight(0xffffff, 0);
+        const ambientLight = new THREE.AmbientLight(0xffffff, 0.2);
         scene.add(ambientLight);
 
-        const pointLight = new THREE.PointLight(0xf8c8a8, 2);
-        pointLight.position.set(-3, 8, 5);
+        const pointLight = new THREE.PointLight(0xf8c8a8, 4);
+        pointLight.position.set(-2, 5, 3.5);
         scene.add(pointLight);
 
-        // Загрузка модели
-        let mixer;
+        let mixers = [];
+        let actions = [];
+        let currentActionIndex = 0;
+
         const loader = new THREE.GLTFLoader();
 
-        loader.load('untitled2.glb', function (glb) {
-            const model = glb.scene;
-            mixer = new THREE.AnimationMixer(model);
-            glb.animations.forEach((clip) => {
-                const action = mixer.clipAction(clip);
-                action.play();
-            });
-            model.position.set(0, 0, 0);
-            model.scale.setScalar(1.2);
-            scene.add(model);
-        });
+        function loadModel(path, position) {
+            loader.load(path, function (glb) {
+                const model = glb.scene;
+                const mixer = new THREE.AnimationMixer(model);
+                const action = mixer.clipAction(glb.animations[0]); // Берём первую анимацию
 
-        // Анимация и рендеринг
-        function animate() {
-            requestAnimationFrame(animate);
-            const delta = 0.016;
-            if (mixer) mixer.update(delta);
-            renderer.render(scene, camera);
+                actions.push({ mixer, action });
+                mixers.push(mixer);
+
+                model.position.set(position, 0, 0);
+                model.scale.setScalar(1.2);
+                scene.add(model);
+
+                if (actions.length === 3) startAnimationLoop(); // Запускаем, когда все 3 модели загружены
+            });
         }
 
-        animate();
+        loadModel('/untitled.glb', -3);
+        loadModel('/untitled2.glb', 0);
+        loadModel('/untitled3.glb', 3);
+
+        function startAnimationLoop() {
+            playNextAnimation();
+        }
+
+        function playNextAnimation() {
+            actions.forEach(({ action }) => action.stop()); // Останавливаем все анимации
+
+            const { action } = actions[currentActionIndex];
+            action.reset().play();
+            action.clampWhenFinished = true; // Останавливает анимацию после завершения
+            action.loop = THREE.LoopOnce; // Проигрывает только 1 раз
+
+            action.onFinished = function () {
+                action.paused = true;
+            };
+
+            currentActionIndex = (currentActionIndex + 1) % actions.length; // Меняем анимацию по кругу
+
+            setTimeout(playNextAnimation, action.getClip().duration * 700); // Ждём окончания анимации и меняем
+        }
+
+        function animate() {
+            requestAnimationFrame(animate);
+            const delta = 0.015;
+            mixers.forEach(mixer => mixer.update(delta)); // Обновляем все смешиватели
+            renderer.render(scene, camera); // Рендерим сцену
+        }
+
+        animate(); // Запускаем анимацию
     </script>
 </body>
 </html>
