--- a/index.html
+++ b/index.html
@@ -36,18 +36,19 @@
         camera.position.set(0, 5, 0);
         camera.lookAt(0, 0, 0);
 
-        const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true, preserveDrawingBuffer: false });
+        const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
-        renderer.setPixelRatio(3);
-        renderer.outputEncoding = THREE.sRGBEncoding;
-        renderer.toneMapping = THREE.ReinhardToneMapping;
+        renderer.setPixelRatio(2.5);
+        renderer.outputEncoding = THREE.LinearEncoding
+        renderer.physicallyCorrectLights = true;
+        renderer.toneMapping = THREE.ACESFilmicToneMapping;
         document.body.appendChild(renderer.domElement);
 
-        const ambientLight = new THREE.AmbientLight(0xffffff, 0.2);
+        const ambientLight = new THREE.AmbientLight(0xffffff, 1);
         scene.add(ambientLight);
 
-        const pointLight = new THREE.PointLight(0xf8c8a8, 4);
-        pointLight.position.set(-2, 5, 3.5);
+        const pointLight = new THREE.PointLight(0xf8c8a8, 80);
+        pointLight.position.set(0, 4, 3.5);
         scene.add(pointLight);
 
         let mixers = [];
