--- a/index.html
+++ b/index.html
@@ -31,23 +31,34 @@
 <body>
 
     <script>
+        // Add this function to detect mobile devices
+        function isMobile() {
+            return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+        }
+
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
         camera.position.set(0, 5, 0);
         camera.lookAt(0, 0, 0);
 
-        const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+        const renderer = new THREE.WebGLRenderer({ 
+            alpha: true, 
+            antialias: !isMobile(), // Disable antialiasing on mobile
+            powerPreference: "high-performance"
+        });
         renderer.setSize(window.innerWidth, window.innerHeight);
-        renderer.setPixelRatio(2.5);
-        renderer.outputEncoding = THREE.LinearEncoding
+        // Lower pixel ratio for mobile devices
+        renderer.setPixelRatio(isMobile() ? Math.min(window.devicePixelRatio, 2) : 2.5);
+        renderer.outputEncoding = THREE.LinearEncoding;
         renderer.physicallyCorrectLights = true;
-        renderer.toneMapping = THREE.ACESFilmicToneMapping;
+        renderer.toneMapping = THREE.NoToneMapping;
         document.body.appendChild(renderer.domElement);
 
-        const ambientLight = new THREE.AmbientLight(0xffffff, 1);
+        // Adjust light intensity for better mobile performance
+        const ambientLight = new THREE.AmbientLight(0xffffff, isMobile() ? 3 : 5);
         scene.add(ambientLight);
 
-        const pointLight = new THREE.PointLight(0xf8c8a8, 80);
+        const pointLight = new THREE.PointLight(0xf8c8a8, isMobile() ? 2 : 3);
         pointLight.position.set(0, 2, 3.5);
         scene.add(pointLight);
 
@@ -60,17 +71,28 @@
         function loadModel(path, position) {
             loader.load(path, function (glb) {
                 const model = glb.scene;
+                
+                // Optimize models for mobile
+                if (isMobile()) {
+                    model.traverse((object) => {
+                        if (object.isMesh) {
+                            object.material.precision = "lowp"; // Use low precision on mobile
+                            object.frustumCulled = true;
+                        }
+                    });
+                }
+                
                 const mixer = new THREE.AnimationMixer(model);
-                const action = mixer.clipAction(glb.animations[0]); // Берём первую анимацию
+                const action = mixer.clipAction(glb.animations[0]); // Take the first animation
 
                 actions.push({ mixer, action });
                 mixers.push(mixer);
 
                 model.position.set(position, 0, 0);
-                model.scale.setScalar(1.2);
+                model.scale.setScalar(isMobile() ? 1 : 1.2); // Smaller scale on mobile
                 scene.add(model);
 
-                if (actions.length === 3) startAnimationLoop(); // Запускаем, когда все 3 модели загружены
+                if (actions.length === 3) startAnimationLoop(); // Start when all 3 models are loaded
             });
         }
 
@@ -83,30 +105,38 @@
         }
 
         function playNextAnimation() {
-            actions.forEach(({ action }) => action.stop()); // Останавливаем все анимации
+            actions.forEach(({ action }) => action.stop()); // Stop all animations
 
             const { action } = actions[currentActionIndex];
             action.reset().play();
-            action.clampWhenFinished = true; // Останавливает анимацию после завершения
-            action.loop = THREE.LoopOnce; // Проигрывает только 1 раз
+            action.clampWhenFinished = true; // Stops animation after it finishes
+            action.loop = THREE.LoopOnce; // Play only once
 
             action.onFinished = function () {
                 action.paused = true;
             };
 
-            currentActionIndex = (currentActionIndex + 1) % actions.length; // Меняем анимацию по кругу
+            currentActionIndex = (currentActionIndex + 1) % actions.length; // Change animation in a loop
 
-            setTimeout(playNextAnimation, action.getClip().duration * 700); // Ждём окончания анимации и меняем
+            // Adjust animation timing for mobile
+            setTimeout(playNextAnimation, action.getClip().duration * (isMobile() ? 500 : 700)); // Wait for animation to end and switch
         }
 
         function animate() {
             requestAnimationFrame(animate);
             const delta = 0.015;
-            mixers.forEach(mixer => mixer.update(delta)); // Обновляем все смешиватели
-            renderer.render(scene, camera); // Рендерим сцену
+            mixers.forEach(mixer => mixer.update(delta)); // Update all mixers
+            renderer.render(scene, camera); // Render the scene
         }
 
-        animate(); // Запускаем анимацию
+        animate(); // Start animation
+
+        // Handle window resizing
+        window.addEventListener('resize', () => {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        });
     </script>
 </body>
 </html>
