--- a/index.html
+++ b/index.html
@@ -25,13 +25,10 @@
             font-family: Arial, sans-serif;
         }
     </style>
-    <!-- Импортируем Three.js и GLTFLoader -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/loaders/GLTFLoader.js"></script>
-</head>
-<body>
+    <script type="module">
+        import * as THREE from 'https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.module.js';
+        import { GLTFLoader } from 'https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/jsm/loaders/GLTFLoader.js';
 
-    <script>
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
         camera.position.set(0, 5, 0);
@@ -56,7 +53,7 @@
         let actions = [];
         let currentActionIndex = 0;
 
-        const loader = new THREE.GLTFLoader(); // Создаём экземпляр GLTFLoader
+        const loader = new GLTFLoader(); // Создаём экземпляр GLTFLoader
 
         // Функция загрузки модели
         function loadModel(path, position) {
@@ -116,4 +113,3 @@
     </script>
 </body>
 </html>
-
