--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
             font-family: Arial, sans-serif;
         }
     </style>
-    <script type="module">
-        import * as THREE from 'https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.module.js';
-        import { GLTFLoader } from 'https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/jsm/loaders/GLTFLoader.js';
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+</head>
+<body>
 
+    <script>
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
         camera.position.set(0, 5, 0);
@@ -37,7 +39,7 @@
         const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         renderer.setPixelRatio(2.5);
-        renderer.outputEncoding = THREE.LinearEncoding;
+        renderer.outputEncoding = THREE.LinearEncoding
         renderer.physicallyCorrectLights = true;
         renderer.toneMapping = THREE.ACESFilmicToneMapping;
         document.body.appendChild(renderer.domElement);
@@ -53,9 +55,8 @@
         let actions = [];
         let currentActionIndex = 0;
 
-        const loader = new GLTFLoader(); // Создаём экземпляр GLTFLoader
+        const loader = new THREE.GLTFLoader();
 
-        // Функция загрузки модели
         function loadModel(path, position) {
             loader.load(path, function (glb) {
                 const model = glb.scene;
@@ -73,17 +74,14 @@
             });
         }
 
-        // Загружаем модели
         loadModel('/untitled.glb', -3);
         loadModel('/untitled2.glb', 0);
         loadModel('/untitled3.glb', 3);
 
-        // Функция для начала анимации
         function startAnimationLoop() {
             playNextAnimation();
         }
 
-        // Функция переключения анимаций
         function playNextAnimation() {
             actions.forEach(({ action }) => action.stop()); // Останавливаем все анимации
 
@@ -101,7 +99,6 @@
             setTimeout(playNextAnimation, action.getClip().duration * 700); // Ждём окончания анимации и меняем
         }
 
-        // Функция анимации сцены
         function animate() {
             requestAnimationFrame(animate);
             const delta = 0.015;
